--- a/views/result.ejs
+++ b/views/result.ejs
@@ -11,25 +11,10 @@
     <script type="text/javascript" src="js/jspdf.plugin.standard_fonts_metrics.js"></script>
     <script type="text/javascript" src="js/jspdf.plugin.split_text_to_size.js"></script>
     <script type="text/javascript" src="js/jspdf.plugin.from_html.js"></script>
-    <script type="text/javascript" src="js/basic.js"></script>
-  <script type="text/javascript">
+   
+	<script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js "></script>
+	<script type="text/javascript" src="js/html2canvas.js"></script>
 
-$(function () {
-
-    var specialElementHandlers = {
-        '#editor': function (element,renderer) {
-            return true;
-        }
-    };
- $('#cmd').click(function () {
-        var doc = new jsPDF();
-        doc.fromHTML($('#target').html(), 15, 15, {
-            'width': 170,'elementHandlers': specialElementHandlers
-        });
-        doc.save('order.pdf');
-    });  
-});
-</script>
 </head>
 <body>
 <table id="target"border="2"  width="60%">
@@ -48,5 +33,21 @@ $(function () {
 <td colspan='5'><%= content %></td>
 </table>
 <button id="cmd">存PDF</button>
+<fieldset>
+    <legend>圖檔</legend>
+    <div>
+    </div>
+  </fieldset>
+  <script>
+ $('#cmd').click(function() {
+      html2canvas($("table")[0], {
+        onrendered: function(canvas) {
+          var $div = $("fieldset div");
+          $div.empty();
+          $("<img />", { src: canvas.toDataURL("image/png") }).appendTo($div);
+        }
+      });
+    });
+</script>
 </body>
 </html>
